--- a/app/src/main/res/layout/powcon_option.xml
+++ b/app/src/main/res/layout/powcon_option.xml
@@ -18,6 +18,7 @@
         android:gravity="center"
         android:text="@string/power" />
     <TextView
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connection to Projector:"/>
