--- a/app/src/main/res/layout/volbrit_option.xml
+++ b/app/src/main/res/layout/volbrit_option.xml
@@ -16,20 +16,20 @@
         android:id="@+id/volseekBarID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:progress="60"
         android:max="100" >
     </SeekBar>
-
     <TextView
+        android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Brightness"/>
+        android:text="Brightness:"/>
     <SeekBar
         android:id="@+id/britseekBarID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:progress="80"
         android:max="100" >
     </SeekBar>
